--- a/index.html
+++ b/index.html
@@ -1,12 +1,61 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Restaurante</title>
+    <link rel="stylesheet" href="src/css/styles.css" />
+  </head>
+  <body style="background-color: #f2f7f3">
+    <header>
+      <div class="logo">
+        <img src="src/img/logo.jpg" width="100px" />
+      </div>
+      <nav>
+        <ul class="navegador">
+          <li>Quiénes somos</li>
+          <li>Especialidades</li>
+          <li>Eventos</li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <img src="src/img/carrusel.jpg" width="100%" />
+      </section>
+      <br />
+      <br />
+      <section>
+        <div>
+          <p>Carta</p>
+          <img src="src/img/carta.jpg" width="380px" />
+          <p>Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. .</p>
+        </div>
+
+        <div>
+          <p>Localización</p>
+          <img src="src/img/localizacion.png" width="275px" />
+          <p>Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. .</p>
+        </div>
+        <div>
+          <p>Reseñas</p>
+          <img src="src/img/reseña.jpg" width="280px">
+          <p>Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. .</p>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <ul>
+        <li class="pie">Política de cookies</li> 
+        <li class="pie">Teléfono: 986 111 111</li>
+        <li class="pie">Restaurante@org</li>
+        <li class="pie">Política de privacidad</li>
+        <li >
+          <img src="src/img/descarga.png" width="30px">
+         <img src="src/img/whats.png" width="30px">
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
